--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:release": "react-native build-android --mode=release --verbose",
+    "android:install": "./install_on_device.sh 38271FDJH008WK",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -35,5 +41,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
